--- a/src/components/PostItem.css
+++ b/src/components/PostItem.css
@@ -1,10 +1,61 @@
 .post-item {
-  width: 100%;
-  border: 1px solid gray;
+  border-radius: 2px;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
-  align-items: baseline;
-  margin: 1rem 0;
-  border-radius: 5px;
-  padding: 1rem;
+  align-items: center;
+  height: 22rem;
+  color: rgb(17, 17, 17);
+  text-decoration: none;
+  box-shadow: 0 2px 5px rgba(14, 14, 14, 0.4);
+  overflow: hidden;
+  -webkit-transition: box-shadow 0.5s;
 }
+
+.post-item:hover {
+  box-shadow: 3px 6px 8px rgba(0, 0, 0, 0.4);
+}
+
+.post-item-title {
+  width: 100%;
+  text-align: left;
+  padding: 1.5rem 2.2rem;
+  background: var(--main-backgound-color);
+  height: 25%;
+  font-weight: normal;
+}
+
+.category-container {
+  width: 100%;
+  height: 20%;
+  padding: 0.4rem 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: white;
+  border-top: 1px solid var(--main-border-color);
+  font-size: 0.9rem;
+}
+
+.author {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+
+/* .post-item-category {
+  color: rgb(81, 81, 81);
+  padding: 0.3rem 1.5rem;
+  width: fit-content;
+  height: 0.6rem;
+  line-height: 0.5rem;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  text-align: center;
+  background: rgb(240, 240, 240);
+  margin-right: 1rem;
+  font-size: 0.9rem;
+  margin-bottom: 0.3rem;
+} */
