--- a/src/components/PostPreview.css
+++ b/src/components/PostPreview.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   width: 80%;
   margin: auto;
 }
@@ -13,10 +14,17 @@
 }
 
 .post-category {
-  color: gray;
-  padding: 1rem 0;
-  width: 50%;
-  text-align: right;
+  color: black;
+  padding: 0.7rem 2rem;
+  width: fit-content;
+  height: 2rem;
+  line-height: 0.8rem;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  text-align: center;
+  background: rgb(240, 240, 240);
 }
 
 .buttons-container {
