--- a/src/components/Posts.css
+++ b/src/components/Posts.css
@@ -1,15 +1,31 @@
-.home {
+.posts {
   font-family: Arial, Helvetica, sans-serif;
-  width: 80%;
-  margin: auto;
+  width: 90%;
+  margin: 1rem auto 0;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  flex-wrap: wrap;
+  padding: 0 1rem;
+  color: rgb(69, 69, 69);
+  justify-content: space-between;
+  border-radius: 5px;
+  align-items: baseline;
+}
+
+#add-post-button {
+  margin-left: 90.6%;
+  margin-bottom: 1rem;
+  background: white;
+}
+
+.posts-h1 {
+  width: 25%;
   padding: 1rem 0;
+  margin-bottom: 3rem;
 }
 
 .post-item-container {
-  width: 100%;
-  text-decoration: none;
-  color: initial;
+  width: 32%;
+  margin-bottom: 1.6rem;
+  display: block;
+  height: fit-content;
 }
