--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   padding: 1.5rem;
+  border-bottom: 1px solid var(--main-border-color);
 }
 
 #main-nav-ul {
