--- a/src/components/NewPost.css
+++ b/src/components/NewPost.css
@@ -1,41 +1,19 @@
 .add-new-post {
-  width: 100%;
+  width: 90%;
   padding: 0 10%;
-  margin: auto;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   color: var(--main-text-color);
+  margin-top: 1.5rem;
 }
+
 .title-and-category {
   width: 100%;
-  margin: 1.5rem 0;
+  margin-bottom: 1.5rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
-
-.textarea-container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-#new-post-title {
-  margin-right: 1rem;
-  font-size: 1rem;
-}
-
-.new-post-buttons-container {
-  width: 100%;
-  margin: 1.5rem 0 3rem;
-}
-
-#save-new-post {
-  margin-right: 2rem;
-  width: 10%;
-}
-#cancel-new-post {
-  width: 10%;
 }
 
 input {
@@ -45,11 +23,12 @@ input {
   outline: none;
   line-height: 1rem;
   padding: 1rem;
-  width: 70%;
+  width: 81.9%;
+  margin-right: 1.5rem;
 }
 
 .input-default {
-  background: white;
+  background: var(--input-background-color);
   color: rgb(53, 53, 53);
   border-bottom: 2px solid transparent;
   justify-self: flex-start;
@@ -57,6 +36,59 @@ input {
 
 .input-default:focus {
   border-bottom: 2px solid rgb(69, 69, 69);
+}
+
+::-webkit-input-placeholder {
+  color: rgb(171, 171, 171);
+}
+
+#new-post-title {
+  margin-right: 1rem;
+  font-size: 1rem;
+}
+
+#select-category {
+  font-size: 1rem;
+}
+
+#image-input {
+  margin-top: 1.5rem;
+  width: 100%;
+  margin-right: 0;
+}
+
+#new-post-text {
+  font-size: 1rem;
+  padding: 1rem;
+  border-radius: 2px;
+  border: none;
+  outline: none;
+  background: var(--input-background-color);
+}
+
+.textarea-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.new-post-buttons-container {
+  width: 100%;
+  margin: 1.5rem 0;
+}
+
+#save-new-post {
+  margin-right: 1.5rem;
+}
+
+#cancel-new-post {
+  margin-right: 1.5rem;
+  background: white;
+  color: var(--main-button-color);
+}
+
+#cancel-new-post:hover {
+  color: rgb(123, 78, 238);
 }
 /* 
 .red {
@@ -68,23 +100,3 @@ input {
   border-bottom: 2px solid rgb(252, 55, 55);
   background: #fbe9e7;
 } */
-
-::-webkit-input-placeholder {
-  color: rgb(201, 201, 201);
-}
-
-#select-category-label {
-}
-
-#select-category {
-  font-size: 1rem;
-}
-
-#new-post-text {
-  font-size: 1rem;
-  padding: 1rem;
-  border-radius: 2px;
-  border: none;
-  outline: none;
-  background: white;
-}
