--- a/src/components/Posts.css
+++ b/src/components/Posts.css
@@ -1,7 +1,7 @@
 .posts {
   font-family: Arial, Helvetica, sans-serif;
   width: 90%;
-  margin: 1rem auto 0;
+  margin: 1.5rem auto 0;
   display: flex;
   flex-wrap: wrap;
   padding: 0 1rem;
@@ -12,9 +12,9 @@
 }
 
 #add-post-button {
-  margin-left: 90.6%;
-  margin-bottom: 1rem;
-  background: white;
+  margin-right: 10%;
+  margin-left: 87.3%;
+  margin-bottom: 1.5rem;
 }
 
 .posts-h1 {
