--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-}
-
 #main-nav {
   text-align: center;
   display: flex;
@@ -34,4 +31,9 @@
 
 a {
   text-decoration: none;
+}
+
+#not-found {
+  text-align: center;
+  margin-top: 3rem;
 }
