--- a/src/components/PostPreview.css
+++ b/src/components/PostPreview.css
@@ -8,7 +8,7 @@
 }
 
 .post-body {
-  margin-top: 1.5rem;
+  margin: 1.5rem 0;
   width: 100%;
   background: white;
   display: flex;
@@ -44,6 +44,7 @@
 
 .post-title {
   padding: 1.5rem 0;
+  line-height: 1.9rem;
 }
 
 .post-category {
