--- a/src/components/Posts.css
+++ b/src/components/Posts.css
@@ -4,28 +4,72 @@
   margin: 1.5rem auto 0;
   display: flex;
   flex-wrap: wrap;
-  padding: 0 1rem;
   color: rgb(69, 69, 69);
-  justify-content: space-between;
+  justify-content: flex-end;
   border-radius: 5px;
   align-items: baseline;
 }
 
 #add-post-button {
-  margin-right: 10%;
-  margin-left: 87.3%;
   margin-bottom: 1.5rem;
 }
 
-.posts-h1 {
-  width: 25%;
-  padding: 1rem 0;
-  margin-bottom: 3rem;
+.post-list-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 1.5rem;
+  grid-row-gap: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .post-item-container {
-  width: 32%;
-  margin-bottom: 1.6rem;
   display: block;
-  height: fit-content;
+}
+
+@media only screen and (min-width: 1440px) {
+  body {
+    width: 1440px;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  html {
+    font-size: 14px;
+  }
+
+  .posts {
+    width: 95%;
+    justify-content: center;
+  }
+
+  .post-list-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  html {
+    font-size: 12px;
+  }
+
+  .posts {
+    margin: 0.8rem auto 0;
+  }
+
+  #add-post-button {
+    margin: 0.5rem 0 1.3rem;
+  }
+
+  .post-list-container {
+    grid-template-columns: minmax(300px, 1fr);
+    grid-row-gap: 0.8rem;
+  }
+}
+
+@media only screen and (max-width: 411px) {
+  body {
+    min-width: 400px;
+  }
 }
