--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,9 @@ a {
   text-align: center;
   margin-top: 3rem;
 }
+
+@media only screen and (max-width: 480px) {
+  #main-nav a {
+    padding: 0 4rem;
+  }
+}
