--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,6 +1,6 @@
 .main-button {
   width: 8rem;
-  padding: 0.8rem 2rem;
+  padding: 1rem 2rem;
   border: none;
   border-radius: 3px;
   background: var(--main-button-color);
@@ -48,4 +48,14 @@
 
 #delete-post:hover {
   color: rgb(252, 193, 242);
+}
+
+@media only screen and (max-width: 480px) {
+  .main-button {
+    width: 100%;
+  }
+
+  #edit-post {
+    margin-bottom: 1.5rem;
+  }
 }
