--- a/src/components/CustomDropdown.css
+++ b/src/components/CustomDropdown.css
@@ -56,24 +56,30 @@
   margin-top: -0.5em;
 }
 
-@media only screen and (max-width: 1410px) {
-  .custom-dropdown {
-    margin-right: 4%;
+@media only screen and (max-width: 1024px) {
+  .custom-dropdown select {
+    padding: 1rem 1.5rem;
+    padding-right: 2.3rem;
   }
 }
 
-@media only screen and (max-width: 485px) {
+@media only screen and (max-width: 650px) {
   .custom-dropdown {
-    width: 46%;
-    margin-right: 1.45rem;
+    position: absolute;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .title-and-category {
+    position: relative;
+  }
+
+  .custom-dropdown {
+    width: 100%;
+    margin-bo: 1.5rem;
   }
 
   .custom-dropdown select {
-    padding: 1rem;
-    padding-left: 1.5rem;
-    padding-right: 11.5rem;
-  }
-  .custom-dropdown::before {
-    width: 100%;
+    width: 99%;
   }
 }
