--- a/src/components/PostImage.css
+++ b/src/components/PostImage.css
@@ -1,6 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+.post-item-image-container {
+  width: 100%;
+  height: 60%;
+
+  overflow: hidden;
+}
+
 .post-image {
   width: 100%;
-  height: 55%;
   -webkit-transition: width 0.5s;
 }
 
