--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -19,3 +19,13 @@
   width: 100%;
   border-radius: 2px;
 }
+
+@media only screen and (max-width: 480px) {
+  body {
+    width: 100%;
+  }
+
+  #main-nav a {
+    padding: 0 4rem;
+  }
+}
