--- a/src/components/Tooltip.css
+++ b/src/components/Tooltip.css
@@ -1,13 +1,13 @@
 #tooltip {
   position: absolute;
-  width: 69.5%;
-  padding: 0.5rem 1rem;
+  width: 28.3%;
+  padding: 0.5rem 0.6rem;
   margin-bottom: 5px;
   text-align: left;
   font-size: 0.7rem;
   color: rgb(255, 255, 255);
-  left: 0;
-  top: 1.5rem;
+  right: 0;
+  top: -1.5rem;
   background: rgb(74, 74, 74);
   box-shadow: 1px 2px 2px rgba(128, 128, 128, 0.697);
   border-radius: 3px;
@@ -28,10 +28,10 @@
   display: block;
   width: 0;
   height: 0;
-  border-top: 6px solid transparent;
-  border-left: 6px solid rgb(74, 74, 74);
+  border-top: 6px solid rgb(74, 74, 74);
+  border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-bottom: 6px solid transparent;
-  top: 32%;
-  right: -0.69rem;
+  top: 2.6rem;
+  left: 01rem;
 }
